@@ -18,6 +18,7 @@ Ben Elliston                        bje@cygnus.com
 Bernd Strieder                      strieder@student.uni-kl.de
 Bob Proulx                          rwp@hprwp.fc.hp.com
 Brian Youmans                       3diff@gnu.org
+Christian Boltz                     grep-bug@cboltz.de
 Christian Groessler                 cpg@aladdin.de
 Dagobert Michelsen                  dam@opencsw.org
 Daisuke GOTO                        gotoh@m-design.com
