@@ -107,6 +107,7 @@ TESTS =						\
   pcre-context					\
   pcre-infloop					\
   pcre-invalid-utf8-input			\
+  pcre-invalid-utf8-infloop			\
   pcre-jitstack					\
   pcre-o					\
   pcre-utf8					\
